Fix fullscreen bounds when docked magnifier is enabled

Fullscreen window bounds should take into account the
bounds of the docked magnifier and the chromevox panel.
Otherwise, the window would be fullscreened using the
entire screen bounds, rather than the available space
left below the docked magnifier and chromevox panel.

BUG=868623
TEST=Added new test

Change-Id: Ibaef9910a39edad95138b8a9a9909cffc1dad16d
Reviewed-on: https://chromium-review.googlesource.com/c/1490903
Commit-Queue: Ahmed Fakhry <afakhry@chromium.org>
Reviewed-by: James Cook <jamescook@chromium.org>
Cr-Commit-Position: refs/heads/master@{#636089}
Former-commit-id: 5d73bdf769d0bdd3a2dbd171c2f93bbc441d184b