ash/magnifier/docked_magnifier_controller.cc
@@ -408,7 +408,7 @@ void DockedMagnifierController::OnDisplayConfigurationChanged() {
     separator_layer_->SetBounds(
         SeparatorBoundsFromViewportBounds(viewport_bounds));
     SetViewportHeightInWorkArea(current_source_root_window_,
-                                separator_layer_->bounds().bottom());
+                                GetTotalMagnifierHeight());
 
     // Resolution changes, screen rotation, etc. can reset the host to confine
     // the mouse cursor inside the root window. We want to make sure the cursor
@@ -435,6 +435,13 @@ void DockedMagnifierController::SetFullscreenMagnifierEnabled(bool enabled) {
     active_user_pref_service_->SetBoolean(
         prefs::kAccessibilityScreenMagnifierEnabled, enabled);
   }
+}
+
+int DockedMagnifierController::GetTotalMagnifierHeight() const {
+  if (separator_layer_)
+    return separator_layer_->bounds().bottom();
+
+  return 0;
 }
 
 const views::Widget* DockedMagnifierController::GetViewportWidgetForTesting()
@@ -692,7 +699,7 @@ void DockedMagnifierController::CreateMagnifierViewport() {
   //    contain the viewport and the separator is allocated at the top of the
   //    screen.
   SetViewportHeightInWorkArea(current_source_root_window_,
-                              separator_layer_->bounds().bottom());
+                              GetTotalMagnifierHeight());
 
   // 6- Confine the mouse cursor within the remaining part of the display.
   ConfineMouseCursorOutsideViewport();
