ash/screen_util_unittest.cc
@@ -4,12 +4,16 @@
 
 #include "ash/screen_util.h"
 
+#include <memory>
+
+#include "ash/magnifier/docked_magnifier_controller.h"
 #include "ash/root_window_controller.h"
 #include "ash/shelf/shelf.h"
 #include "ash/shelf/shelf_constants.h"
 #include "ash/shell.h"
 #include "ash/test/ash_test_base.h"
 #include "ash/wm/window_util.h"
+#include "ash/wm/wm_event.h"
 #include "ui/aura/env.h"
 #include "ui/aura/window.h"
 #include "ui/aura/window_event_dispatcher.h"
@@ -218,6 +222,31 @@ TEST_F(ScreenUtilTest, SnapBoundsToDisplayEdge) {
   bounds = gfx::Rect(0, 552, 800, 48);
   snapped_bounds = screen_util::SnapBoundsToDisplayEdge(bounds, window);
   EXPECT_EQ(snapped_bounds, gfx::Rect(0, 552, 800, 48));
+}
+
+// Tests that making a window fullscreen while the Docked Magnifier is enabled
+// won't make its bounds occupy the entire screen bounds, but will take into
+// account the Docked Magnifier height.
+TEST_F(ScreenUtilTest, FullscreenWindowBoundsWithDockedMagnifier) {
+  UpdateDisplay("1366x768");
+
+  std::unique_ptr<aura::Window> window = CreateToplevelTestWindow(
+      gfx::Rect(300, 300, 200, 150), kShellWindowId_DefaultContainer);
+
+  auto* docked_magnifier_controller =
+      Shell::Get()->docked_magnifier_controller();
+  docked_magnifier_controller->SetEnabled(true);
+
+  const wm::WMEvent event(wm::WM_EVENT_TOGGLE_FULLSCREEN);
+  wm::GetWindowState(window.get())->OnWMEvent(&event);
+
+  constexpr gfx::Rect kDisplayBounds{1366, 768};
+  EXPECT_NE(window->bounds(), kDisplayBounds);
+
+  gfx::Rect expected_bounds = kDisplayBounds;
+  expected_bounds.Inset(
+      0, docked_magnifier_controller->GetTotalMagnifierHeight(), 0, 0);
+  EXPECT_EQ(expected_bounds, window->bounds());
 }
 
 }  // namespace ash
